--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,25 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Coming soon..."
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/2020-02-02-talk-1
+venue: "Barcelona"
+date: 2020-02-02
+location: "Barcelona, Spain"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+I will put here some talks. Coming soon...
+
+
+
+# ---
+# title: "Talk 1 on Relevant Topic in Your Field"
+# collection: talks
+# type: "Talk"
+# permalink: /talks/2012-03-01-talk-1
+# venue: "UC San Francisco, Department of Testing"
+# date: 2012-03-01
+# location: "San Francisco, California"
+# ---
+
+# This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
